--- a/data/hoverboard.config.json
+++ b/data/hoverboard.config.json
@@ -25,8 +25,8 @@
     "indexedDbSession": "hoverboard"
   },
   "mailchimp": {
-    "url": "https://gdg.us11.list-manage.com/subscribe/post?u=b7e853a79164ddfdbda3ed77b&amp;id=7993e39fbe",
-    "name": "b_b7e853a79164ddfdbda3ed77b_7993e39fbe"
+    "url": "http://eepurl.com/b6Pgvn",
+    "name": "Recevoir la newsletter"
   },
   "hashtag": "devfesttoulouse",
   "disqusShortName": "hoverboard-gdg-x",
